Safe data parallelism